# bpfscheduler

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  compile_commands.json  flake.nix  generate_compile_commands.sh  run.sh  run2.sh  run_mutex_monitor.sh  run_with_thread_checker.sh
.cache/clangd/index/: runqslower.bpf.c.A6A0D58D07C9FD26.idx  runqslower.h.8D6C7CAE7D8E6ECB.idx
.claude/: settings.local.json
samples/: Makefile  a.out  account_bad.cc  compile_commands.json  inf_loop.c  mutex_test.c
src/: bpf_intf.rs  lib.rs  main.rs  mutex_bpf_skel.rs  mutex_monitor.rs  stats.rs
src/bpf/: intf.h  main.bpf.c  mutex_intf.h  mutex_monitor.bpf.c  runqslower.skel.rs
