[package]
name = "bpfscheduler"
version = "1.0.17"
edition = "2021"
authors = [""]
description = "bpfscheduler"
license = "GPL-2.0-only"

[package.metadata.scx]
ci.use_clippy = true

[[bin]]
name = "scx_chaos"
path = "src/main.rs"

[dependencies]

anyhow = "1.0.65"
clap = { version = "4.5.28", features = ["derive", "env", "unicode", "wrap_help"] }
crossbeam = "0.8.4"
ctrlc = { version = "3.1", features = ["termination"] }
libbpf-rs = "0.26.0-beta.0"
libc = "0.2.137"
log = "0.4.17"
nix = { version = "0.29", features = ["process"] }
serde = { version = "1.0.215", features = ["derive"] }
simplelog = "0.12"
env_logger = "0.10"
scx_p2dq = { git = "https://github.com/sched-ext/scx", rev = "89a7736c71370335660980aa31a62482f1cd32d1" }
scx_utils = { git = "https://github.com/sched-ext/scx", rev = "89a7736c71370335660980aa31a62482f1cd32d1" }
scx_stats = { git = "https://github.com/sched-ext/scx", rev = "89a7736c71370335660980aa31a62482f1cd32d1" }
scx_stats_derive = { git = "https://github.com/sched-ext/scx", rev = "89a7736c71370335660980aa31a62482f1cd32d1" }

[build-dependencies]
scx_p2dq = { git = "https://github.com/sched-ext/scx", rev = "89a7736c71370335660980aa31a62482f1cd32d1" }
scx_utils = { git = "https://github.com/sched-ext/scx", rev = "89a7736c71370335660980aa31a62482f1cd32d1" }
